--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/index.ts",
-    "build": "tsc"
+    "build": "tsc index.ts --outDir dist"
   },
   "dependencies": {
     "crypto": "^1.0.1",
