--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc index.ts --outDir dist"
+    "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
     "crypto": "^1.0.1",
